--- a/GroupProject4/GroupProject4/GroupProject4.csproj
+++ b/GroupProject4/GroupProject4/GroupProject4.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Book.cs" />
     <Compile Include="BookComparator.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="CategoryComparator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
